--- a/index.html
+++ b/index.html
@@ -24,6 +24,57 @@
 				<div class="card-section">
 					<img src="../assets14/img/card.png" alt="Card" class="card-image" />
 				</div>
+        
+        <div class="options">
+					<div class="option">
+						<img src="../assets14/img/lock.svg" alt="Lock icon" class="icon" />
+						<div class="text">
+							<p class="title">Lock card</p>
+							<p class="subtitle">You can unlock it later</p>
+						</div>
+						<label class="switch">
+							<input type="checkbox" />
+							<span class="slider"></span>
+						</label>
+					</div>
+
+					<div class="option">
+						<img src="../assets14/img/plane.svg" alt="Plane icon" class="icon" />
+						<div class="text">
+							<p class="title">Payments abroad</p>
+							<p class="subtitle">Enable your card abroad</p>
+						</div>
+						<label class="switch">
+							<input type="checkbox" checked />
+							<span class="slider"></span>
+						</label>
+					</div>
+
+					<div class="option">
+						<img src="../assets14/img/laptop.svg" alt="Laptop icon" class="icon" />
+						<div class="text">
+							<p class="title">Online payments</p>
+							<p class="subtitle">Enable online transactions</p>
+						</div>
+						<label class="switch">
+							<input type="checkbox" />
+							<span class="slider"></span>
+						</label>
+					</div>
+
+					<div class="option">
+						<img src="../assets14/img/atm.svg" alt="ATM icon" class="icon" />
+						<div class="text">
+							<p class="title">ATM withdrawals</p>
+							<p class="subtitle">Enable ATM withdrawals</p>
+						</div>
+						<label class="switch">
+							<input type="checkbox" />
+							<span class="slider"></span>
+						</label>
+					</div>
+				</div>
+			</div>
 
 			</div>
 		</div>
