added a blue diagonal line

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<div class="top-bar"></div>
 
 			<div class="container">
+				<div class="blue-diagonal"></div>
 
 				<div class="header">
 					<h2>CARD</h2>
@@ -24,7 +25,7 @@
 				<div class="card-section">
 					<img src="../assets14/img/card.png" alt="Card" class="card-image" />
 				</div>
-        
+
         <div class="options">
 					<div class="option">
 						<img src="../assets14/img/lock.svg" alt="Lock icon" class="icon" />
