fixed some bugs

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 				</div>
 
 				<div class="card-section">
-					<img src="../assets14/img/card.png" alt="Card" class="card-image" />
+					<img src="img/card.png" alt="Card" class="card-image" />
 				</div>
 
         <div class="options">
 					<div class="option">
-						<img src="../assets14/img/lock.svg" alt="Lock icon" class="icon" />
+						<img src="img/lock.svg" alt="Lock icon" class="icon" />
 						<div class="text">
 							<p class="title">Lock card</p>
 							<p class="subtitle">You can unlock it later</p>
@@ -40,7 +40,7 @@
 					</div>
 
 					<div class="option">
-						<img src="../assets14/img/plane.svg" alt="Plane icon" class="icon" />
+						<img src="img/plane.svg" alt="Plane icon" class="icon" />
 						<div class="text">
 							<p class="title">Payments abroad</p>
 							<p class="subtitle">Enable your card abroad</p>
@@ -52,7 +52,7 @@
 					</div>
 
 					<div class="option">
-						<img src="../assets14/img/laptop.svg" alt="Laptop icon" class="icon" />
+						<img src="img/laptop.svg" alt="Laptop icon" class="icon" />
 						<div class="text">
 							<p class="title">Online payments</p>
 							<p class="subtitle">Enable online transactions</p>
@@ -64,7 +64,7 @@
 					</div>
 
 					<div class="option">
-						<img src="../assets14/img/atm.svg" alt="ATM icon" class="icon" />
+						<img src="img/atm.svg" alt="ATM icon" class="icon" />
 						<div class="text">
 							<p class="title">ATM withdrawals</p>
 							<p class="subtitle">Enable ATM withdrawals</p>
